Added ability to choose XPDF or GhostScript as the renderer. (Speed is the same since the PDF stream is not persisted)

--- a/PDFViewASP/PDFViewASP.vbproj
+++ b/PDFViewASP/PDFViewASP.vbproj
@@ -35,9 +35,15 @@
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="itextsharp, Version=4.1.6.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca" />
-    <Reference Include="PDFLibNet, Version=1.0.6.2, Culture=neutral, processorArchitecture=x86" />
-    <Reference Include="StatefullScrollPanel, Version=1.0.2503.42155, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="itextsharp, Version=4.1.6.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
+    <Reference Include="PDFLibNet, Version=1.0.6.4, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
+    <Reference Include="StatefullScrollPanel, Version=1.0.2503.42155, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
