--- a/trunk/PDFViewASP/PDFViewASP.vbproj
+++ b/trunk/PDFViewASP/PDFViewASP.vbproj
@@ -79,9 +79,15 @@
   <ItemGroup>
     <Content Include="AppCode\StatefullScrollPanel.dll" />
     <Content Include="Default.aspx" />
+    <Content Include="images\ActualSize.png" />
+    <Content Include="images\FitToScreen.png" />
+    <Content Include="images\FitToWidth.png" />
     <Content Include="images\Next_24x24.png" />
+    <Content Include="images\Play_24x24.png" />
     <Content Include="images\Previous_24x24.png" />
     <Content Include="images\Redo_24x24.png" />
+    <Content Include="images\Rewind_24x24.png" />
+    <Content Include="images\Search_24x24.png" />
     <Content Include="images\Undo_24x24.png" />
     <Content Include="images\Zoom In_24x24.png" />
     <Content Include="images\Zoom Out_24x24.png" />
