--- a/trunk/PDFViewASP/PDFViewASP.vbproj
+++ b/trunk/PDFViewASP/PDFViewASP.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{16F4EC0A-ED5E-469E-8901-6EFC89561DBF}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</ProjectTypeGuids>
@@ -35,9 +35,6 @@
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="itextsharp, Version=4.1.6.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
     <Reference Include="PDFLibNet, Version=1.0.6.4, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -77,7 +74,6 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AppCode\StatefullScrollPanel.dll" />
     <Content Include="Default.aspx" />
     <Content Include="images\ActualSize.png" />
     <Content Include="images\FitToScreen.png" />
@@ -91,24 +87,15 @@
     <Content Include="images\Undo_24x24.png" />
     <Content Include="images\Zoom In_24x24.png" />
     <Content Include="images\Zoom Out_24x24.png" />
-    <Content Include="AppCode\gsdll32.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AppCode\itextsharp.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AppCode\PDFLibNet.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="lib\PDFLibNet.dll" />
+    <Content Include="lib\StatefullScrollPanel.dll" />
     <Content Include="Web.config" />
     <Content Include="PDFViewer.ascx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppCode\AFPDFLibUtil.vb" />
     <Compile Include="AppCode\ASPPDFLib.vb" />
-    <Compile Include="AppCode\GhostScriptLib.vb" />
     <Compile Include="AppCode\ImageUtil.vb" />
-    <Compile Include="AppCode\iTextSharpUtil.vb" />
     <Compile Include="Default.aspx.vb">
       <SubType>ASPXCodeBehind</SubType>
       <DependentUpon>Default.aspx</DependentUpon>
@@ -183,6 +170,9 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
+          <UseCustomServer>False</UseCustomServer>
+          <CustomServerUrl>
+          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
