--- a/PDFViewASP/PDFViewASP.vbproj
+++ b/PDFViewASP/PDFViewASP.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{16F4EC0A-ED5E-469E-8901-6EFC89561DBF}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</ProjectTypeGuids>
@@ -35,6 +35,10 @@
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PDFLibCmdLine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\PDFLibCmdLine\bin\Release\PDFLibCmdLine.exe</HintPath>
+    </Reference>
     <Reference Include="PDFLibNet, Version=1.0.6.4, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -93,8 +97,8 @@
     <Content Include="PDFViewer.ascx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppCode\AFPDFLibUtil.vb" />
-    <Compile Include="AppCode\ASPPDFLib.vb" />
+    <Compile Include="AppCode\CmdHelper.vb" />
+    <Compile Include="AppCode\ExternalPDFLib.vb" />
     <Compile Include="AppCode\ImageUtil.vb" />
     <Compile Include="Default.aspx.vb">
       <SubType>ASPXCodeBehind</SubType>
@@ -170,9 +174,6 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
