--- a/trunk/PDFLibCmdLine/PDFLibCmdLine.vbproj
+++ b/trunk/PDFLibCmdLine/PDFLibCmdLine.vbproj
@@ -35,6 +35,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DocumentationFile>PDFLibCmdLine.xml</DocumentationFile>
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PDFLibNet, Version=1.0.6.6, Culture=neutral, PublicKeyToken=26d87f7d66fb2aee, processorArchitecture=x86">
@@ -44,6 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
